Possible fix for legend display on mobiles

--- a/styles-extra.css
+++ b/styles-extra.css
@@ -16,4 +16,5 @@ fieldset {
 fieldset > legend {
     padding-left: 16px;
     padding-right: 16px;
+    display: inline-block;
 }
